test/corpus/analytic_windowed_function.txt
=====================================
analytic first
=====================================
SELECT FIRST_VALUE(foo) OVER (PARTITION BY BAZ ORDER BY BAR) FROM QUUX
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_function
                            (first_value_)
                            (expression
                              (full_column_name
                                (id_)))
                            (over_clause
                              (expression_list_
                                (expression
                                  (full_column_name
                                    (id_))))
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
analytic last
=====================================
SELECT LAST_VALUE(foo) OVER (PARTITION BY BAZ ORDER BY BAR) FROM QUUX
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_function
                            (last_value_)
                            (expression
                              (full_column_name
                                (id_)))
                            (over_clause
                              (expression_list_
                                (expression
                                  (full_column_name
                                    (id_))))
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
analytic lag 1
=====================================
SELECT LAST_VALUE(foo) OVER (PARTITION BY BAZ ORDER BY BAR) FROM QUUX
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_function
                            (last_value_)
                            (expression
                              (full_column_name
                                (id_)))
                            (over_clause
                              (expression_list_
                                (expression
                                  (full_column_name
                                    (id_))))
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
analytic LAG IN
=====================================
SELECT LAG(foo,1 ,0) IGNORE NULLS OVER (PARTITION BY BAZ ORDER BY BAR) FROM QUUX
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_function
                            (lag_)
                            (lag_lead_args
                              (expression
                                (full_column_name
                                  (id_)))
                              (expression
                                (primitive_expression
                                  (primitive_constant
                                    (decimal_))))
                              (expression
                                (primitive_expression
                                  (primitive_constant
                                    (decimal_)))))
                            (ignore_nulls_)
                            (over_clause
                              (expression_list_
                                (expression
                                  (full_column_name
                                    (id_))))
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
analytic LEAD RESPECT
=====================================
SELECT LEAD(foo,1) RESPECT NULLS OVER (PARTITION BY BAZ ORDER BY BAR) FROM QUUX
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_function
                            (lead_)
                            (lag_lead_args
                              (expression
                                (full_column_name
                                  (id_)))
                              (expression
                                (primitive_expression
                                  (primitive_constant
                                    (decimal_)))))
                            (respect_nulls_)
                            (over_clause
                              (expression_list_
                                (expression
                                  (full_column_name
                                    (id_))))
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=====================================
analytic LAGLEAD0
=====================================
SELECT LEAD(foo) OVER (PARTITION BY BAZ ORDER BY BAR) FROM QUUX
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (analytic_windowed_function
                            (lead_)
                            (lag_lead_args
                              (expression
                                (full_column_name
                                  (id_))))
                            (over_clause
                              (expression_list_
                                (expression
                                  (full_column_name
                                    (id_))))
                              (order_by_clause
                                (order_by_expression
                                  (expression
                                    (full_column_name
                                      (id_))))))))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))
