test/corpus/as_column_alias.txt
=================================================
as_column_alias Sans
=================================================
select id foo FROM PostTypes
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (full_column_name
                          (id_)))
                      (as_column_alias
                        (column_alias
                          (id_))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=================================================
as_column_alias Full
=================================================
select id as foo FROM PostTypes
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (full_column_name
                          (id_)))
                      (as_column_alias
                        (column_alias
                          (id_))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))
