test/corpus/column_alias.txt
=================================================
column_alias id_
=================================================
select id [foo] from PostTypes
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (full_column_name
                          (id_)))
                      (as_column_alias
                        (column_alias
                          (id_))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))

=================================================
column_alias string lit
=================================================
select id N'baz' from PostTypes
---
(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (full_column_name
                          (id_)))
                      (as_column_alias
                        (column_alias
                          (string_lit))))))
                (table_sources
                  (table_source
                    (table_source_item
                      (full_table_name
                        (id_)))))))))))))
