test/corpus/conversion_functions.txt
=================================================
Conversion Function CAST
=================================================
SELECT CAST('a' as VARCHAR)
---

(tsql_file
  (batch
    (sql_clauses
      (dml_clause
        (select_statement_standalone
          (select_statement
            (query_expression
              (query_specification
                (select)
                (select_list
                  (select_list_elem
                    (expression_elem
                      (expression
                        (function_call
                          (conversion_functions
                            (cast_)
                            (expression
                              (primitive_expression
                                (primitive_constant
                                  (string_lit))))
                            (AS)
                            (data_type
                              (varchar_))))))))))))))))
